# DudEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  app.cpp  app.hpp  compile_shaders.bat  core.hpp  device.cpp  device.hpp  dud_app.cpp  dud_app.hpp  dud_camera.cpp  dud_camera.hpp  dud_core.hpp  dud_device.cpp  dud_device.hpp  dud_mesh.cpp  dud_mesh.hpp  dud_model.cpp  dud_model.hpp  dud_pipeline.cpp  dud_pipeline.hpp  dud_render_system.cpp  dud_render_system.hpp  dud_renderer.cpp  dud_renderer.hpp  dud_scene.cpp  dud_scene.hpp  dud_swap_chain.cpp  dud_swap_chain.hpp  dud_window.cpp  dud_window.hpp  macros.cpp  macros.hpp  main.cpp  mesh.cpp  mesh.hpp  pipeline.cpp  (+11 more)
components/: camera_component.cpp  camera_component.hpp  dud_camera_component.cpp  dud_camera_component.hpp  dud_mesh_component.cpp  dud_mesh_component.hpp  dud_transform_component.cpp  dud_transform_component.hpp  mesh_component.cpp  mesh_component.hpp  transform_component.cpp  transform_component.hpp
scene/: scene.cpp  scene.hpp
shaders/: default_fragment.frag  default_fragment.frag.spv  default_vertex.vert  default_vertex.vert.spv
systems/: dud_rotation_system.cpp  dud_rotation_system.hpp  dud_systems_container.hpp  rotation_system.cpp  rotation_system.hpp  single_thread_system.hpp  systems_container.hpp
